stopping bio page for the day

--- a/week3/day4/toDoExercise.html
+++ b/week3/day4/toDoExercise.html
@@ -14,6 +14,8 @@
         <li> Change of address form </li>
         <li> Set up autobilling for everything </li>
     </ul>
+
+    <marquee behavior="" direction="">Graphic design is my passion</marquee>
 </body>
 </html>
 
