--- a/week3/day4/bioPage.html
+++ b/week3/day4/bioPage.html
@@ -14,7 +14,7 @@
     <h1> Adam Wright </h1>
     <h3> Master of Games </h3>
 
-    <img class="foreground" src="./corpGame.jpg" alt="Adam answering character questions from a player">
+    <img class="foreground" src="./pictures/corpGame.jpg" alt="Adam answering character questions from a player">
 
     <p> A full-time professional Game Master specializing in <em>Dungeons and Dragons</em>, Adam has experience running games online and in-person. 
         He has four publications on DM's Guild and writes poetry and short stories as a hobby. </p>
