--- a/week3/day5/responsiveImageGallery.html
+++ b/week3/day5/responsiveImageGallery.html
@@ -9,22 +9,31 @@
 </head>
 <body>
     <div class="allImages">
-        <img src="https://picsum.photos/200/100" alt="">
-        <img src="https://picsum.photos/200/400" alt="">
-        <img src="https://picsum.photos/200/300" alt="">
-        <img src="https://picsum.photos/200/200" alt="">
-        <img src="https://picsum.photos/200/250" alt="">
-        <img src="https://picsum.photos/200/350" alt="">
-        <img src="https://picsum.photos/200/150" alt="">
-        <img src="https://picsum.photos/200/450" alt="">
-        <img src="https://picsum.photos/200/120" alt="">
-        <img src="https://picsum.photos/200/240" alt="">
-        <img src="https://picsum.photos/200/260" alt="">
-        <img src="https://picsum.photos/200/370" alt="">
-        <img src="https://picsum.photos/200/180" alt="">
-        <img src="https://picsum.photos/200/220" alt="">
-        <img src="https://picsum.photos/200/360" alt="">
-        <img src="https://picsum.photos/200/245" alt="">
+        <div class="column">
+            <img src="https://picsum.photos/200/100" alt="">
+            <img src="https://picsum.photos/200/400" alt="">
+            <img src="https://picsum.photos/200/300" alt="">
+            <img src="https://picsum.photos/200/200" alt="">
+        </div>
+        <div class="column">
+            <img src="https://picsum.photos/200/250" alt="">
+            <img src="https://picsum.photos/200/350" alt="">
+            <img src="https://picsum.photos/200/150" alt="">
+            <img src="https://picsum.photos/200/450" alt="">
+        </div>
+        <div class="column">
+            <img src="https://picsum.photos/200/120" alt="">
+            <img src="https://picsum.photos/200/240" alt="">
+            <img src="https://picsum.photos/200/260" alt="">
+            <img src="https://picsum.photos/200/370" alt="">
+        </div>
+        <div class="column">
+            <img src="https://picsum.photos/200/180" alt="">
+            <img src="https://picsum.photos/200/220" alt="">
+            <img src="https://picsum.photos/200/360" alt="">
+            <img src="https://picsum.photos/200/245" alt="">
+        </div>
 </div>
+
 </body>
 </html>
