implimented some stuff I saw in class

--- a/week4/day1-flexbox/netflixClone/netflixClone.html
+++ b/week4/day1-flexbox/netflixClone/netflixClone.html
@@ -17,11 +17,8 @@
             <button> SIGN IN </button>
         </div>
     </nav>
-    
-    <p>
-        <h1>Movies</h1>
-        They're really cool guys. Watch more movies. 
-    </p>
+    <h1>Movies</h1>
+    <p> They're really cool guys. Watch more movies. </p>
 
     <label for="row"> Popular on Netflix </label>
     <div class="row">
